# seq-to-first-iso

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  Makefile  README.md  SLIM.lock.yml  apt.txt  environment-readthedocs.yml  environment.lock.yml  environment.yml  postBuild  seq-to-first-iso.py  seq_to_first_iso.py  setup.cfg  setup.py  tox.ini
demo/: demo.ipynb  demo_CLI.ipynb  peptides_mod.tsv  peptides_stfi.tsv
devtools/: bumpversion.cfg  release.md
doc/: conf.py  index.rst  knime_config.md  stfi.md
doc/api/: stfi.rst
doc/notebooks/: demo_API.nblink  demo_CLI.nblink
flask_app/: .gitignore  requirements.txt  routes.py
flask_app/app/: routes.py
flask_app/app/templates/: progress.html  upload.html
flask_app/static/: custom.css
flask_app/templates/: bulma-layout.html  error.html  upload.html
knime/: environment-knime.yml
notebooks/: demo_API.ipynb  demo_CLI.ipynb  peptides.tsv  peptides.txt  peptides_stfi.tsv
recipes/: meta.yaml
seq_to_first_iso/: __init__.py  seq_to_first_iso.py
tests/: test_input.py  test_seq_to_first_iso.py
tests/test_data/: bad_sample_sequence.txt  reference_sequence.tsv  reference_sequence_AT.tsv  sample_bad_sequence.txt  sample_sequence.tsv  sample_sequence.txt  sample_sequence_stfi_ref_A.tsv
