[metadata]
name = seq-to-first-iso
version = {version}
author = Lilian Yang-crosson, Pierre Poulain
author_email = pierre.poulain@cupnet.net
url = https://github.com/pierrepo/seq-to-first-iso
description = Compute first two isotopologues intensity from peptide sequence.
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
long_description_content_type = text/markdown
keywords = proteomics, spectrometry, isotopologues
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
zip_safe = False
python_requires= >=3.6
install_requires =
    pandas
    pyteomics[Unimod]
include_package_data = True

[options.packages.find]
exclude=flask_app

[options.package_data]
* = LICENSE.txt, CHANGELOG.md

[options.entry_points]
console_scripts =
    seq-to-first-iso = seq_to_first_iso.seq_to_first_iso:cli
